fixed body overflow on mobile screens

--- a/src/scss/setup/_base.scss
+++ b/src/scss/setup/_base.scss
@@ -3,7 +3,7 @@ html {
   font-size: 100%;
 }
 
-body{
+.app{
   overflow-x: hidden;
 }
 
